Correction des liens generate et creation de la route types

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,18 @@ body {
     align-items: center;
 }
 
+.site-nav__list {
+    display: flex;
+}
+
+.site-nav__item {
+    margin-left: 1rem;
+}
+
+.site-nav__link:hover {
+    text-decoration: underline;
+}
+
 .main-title {
     font-size: 2.5rem;
 }
