Création de la vue types et de la route pokemons-by-types

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,7 +94,7 @@ body {
     margin: 3rem 0 2rem;
 }
 
-.pokemon-detail__type {
+.pokemon-type {
     border: 0;
     padding: 1rem;
     border-radius: 0.5rem;
