--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,6 +50,13 @@ body {
     margin: 2rem;
 }
 
+.page-title--type {
+    width: 30%;
+    margin: 2rem auto;
+    border-radius: 2rem;
+    padding: 1rem;
+}
+
 .pokemon-list {
     display: flex;
     flex-wrap: wrap;
@@ -141,5 +148,5 @@ body {
 
 .homelink {
     text-align: center;
-    margin-top: 2rem;
+    margin: 3rem 0;
 }
